--- a/src/components/calendar.css
+++ b/src/components/calendar.css
@@ -4,4 +4,82 @@
     height: calc(60% - 1rem);
     background-color: rgb(13, 13, 13);
     border-radius: 1rem;
+    padding: 1rem;
+    display: grid;
+    align-items: center;
+}
+
+.date {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 1rem;
+    padding-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+.date h2 {
+    font-size: 1rem;
+    font-weight: 300;
+    color: #bbb;
+}
+
+.btns {
+    display: flex;
+    column-gap: 1rem;
+    margin-left: auto;
+}
+
+.btns i {
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2c3542;
+    border-radius: 50%;
+    font-size: 1rem;
+    color: #b88efc;
+    cursor: pointer;
+}
+
+.weekdays {
+    width: 100%;
+    display: flex;
+    margin: .85rem 0;
+}
+
+.weekdays span {
+    width: calc(100% /7);
+    font-size: .85rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #78879e;
+    display: flex;
+    justify-content: center;
+}
+
+.days {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.days span {
+    width: calc(100% / 7);
+    aspect-ratio: 1;
+    font-size: 1rem;
+    color: #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.current-day {
+    font-size: 1rem !important;
+    color: #fff;
+    background: linear-gradient(to right, #b88efc, #6877f4);
+    border-radius: 50%;
 }
