--- a/src/components/news.css
+++ b/src/components/news.css
@@ -62,7 +62,7 @@
     display: flex;
     column-gap: 2rem;
     height: calc(100% - 0.85rem);
-    padding: 0 2rem;
+    padding: 0 1rem;
 }
 
 .navbar {
@@ -74,7 +74,7 @@
 }
 
 .user {
-    width: 100%;
+    width: 95%;
     height: 20%;
     background-color: rgb(13, 13, 13);
     border-radius: 1rem;
@@ -86,7 +86,7 @@
 }
 
 .user img {
-    width: 4rem;
+    width: 3.5rem;
     object-fit: cover;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -99,7 +99,7 @@
 }
 
 .categories {
-    width: 100%;
+    width: 95%;
     height: calc(85% - 2rem);
     background-color: rgb(13, 13, 13);
     border-radius: 1rem;
@@ -140,7 +140,7 @@
 }
 
 .news-section {
-    width: clamp(30rem, 43cqi, 40%);
+    width: clamp(40rem, 40cqi, 40%);
     border-radius: 1rem;
     height: 100%;
 }
@@ -181,17 +181,17 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 0.5rem;
-    padding: 1rem;
+    padding: .85rem;
     justify-content: center;
     align-items: center;
 }
 
-.my-blogs {
-    width: clamp(30rem, 27cqi, 20%);
+/* .my-blogs {
+    width: clamp(35rem, 27cqi, 20%);
     height: 100%;
     background-color: rgb(13, 13, 13);
     border-radius: 1rem;
-}
+} */
 
 .headline img {
     object-fit: cover;
@@ -222,8 +222,8 @@
     position: absolute;
     bottom: 0;
     right: 0rem;
-    padding: 1rem 0.70rem 1rem 1rem;
-    line-height: 1rem;
+    padding: .5rem 0.2rem .8rem .8rem;
+    line-height: .85rem;
     font-size: small;
     width: 100%;
     background-color: rgba(0, 0, 0, .7);
@@ -231,8 +231,82 @@
 
 .news-grid-item i {
     position: absolute;
-    bottom: 0.53rem;
-    right: 0.80rem;
+    bottom: .2rem;
+    right: .8rem;
+    cursor: pointer;
+}
+
+.my-blogs {
+    width: clamp(10rem, 28cqi, 28%);
+    height: 100%;
+    background: #111214;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    padding-bottom: 1rem;
+}
+
+.my-blog-heading {
+    font-size: 1.5rem;
+    color: #ddd;
+    padding: 1rem;
+}
+
+.blog-posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: .80rem;
+    padding: .85rem;
+}
+
+.blog-post {
+    flex: 0 1 calc(50% - 0.6rem);
+    border-radius: .85rem;
+    position: relative;
+}
+
+.blog-post img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+}
+
+.blog-post h3 {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: .65rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: .75rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #fff;
+    overflow-wrap: break-word;
+}
+
+.post-button {
+    position: absolute;
+    top: .50rem;
+    right: .50rem;
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+    opacity: 0;
+}
+
+.blog-post:hover .post-button {
+    opacity: 1;
+    visibility: visible;
+}
+
+.post-button button {
+    background-color: transparent;
+    border: none;
+    font-size: 1rem;
+    color: #fff;
     cursor: pointer;
 }
 
@@ -245,6 +319,20 @@
 
 .news-footer {
     width: 100%;
-    min-height: 1rem;
+    min-height: 3rem;
     background-color: rgb(13, 13, 13);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+}
+
+.news-footer p {
+    font-size: 1rem;
+    font-weight: 300;
+    color: #bbb;
+}
+
+.news-footer p span {
+    font-size: 1rem;
 }
