--- a/src/components/blog.css
+++ b/src/components/blog.css
@@ -7,9 +7,8 @@
 .left {
     width: 50%;
     height: 100%;
-    background: linear-gradient(rgba(184, 142, 252, .3), rgba(104, 119, 244, .2)), url(../assets/back.png)
-    center no-repeat;
-    background-size: cover ;
+    background: linear-gradient(rgba(184, 142, 252, .3), rgba(104, 119, 244, .2)), url(../assets/back.png) center no-repeat;
+    background-size: cover;
     border-radius: 1rem 0 0 1rem;
     position: relative;
 }
@@ -26,7 +25,7 @@
     transform: translateY(-50%);
 }
 
-.right{
+.right {
     width: 50%;
     height: 100%;
     display: flex;
@@ -50,11 +49,24 @@
     transform: translateY(.1rem);
 }
 
-.right-form {
+.right-form.visible {
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 2.5rem;
+}
+
+.right-form.hidden {
+    display: none;
+}
+
+.submission-msg {
+    font-size: 3rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    background: linear-gradient(to right, #b88efc, #6877f4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .right-form h1 {
@@ -71,7 +83,7 @@
     row-gap: 2rem;
 }
 
-.file-upload{
+.file-upload {
     display: flex;
     align-items: center;
     column-gap: 1rem;
@@ -90,7 +102,8 @@
 }
 
 
-.title-input, .text-input {
+.title-input,
+.text-input {
     width: 25rem;
     background: transparent;
     border: none;
@@ -104,9 +117,23 @@
     resize: none;
 }
 
+.text-input::-webkit-scrollbar{
+    display: none;
+}
+
 .title-input:focus::placeholder,
 .text-input:focus::placeholder {
     color: transparent;
+}
+
+.title-input.invalid,
+.text-input.invalid {
+    border: .1rem solid #c4145a;   
+}
+
+.title-input.invalid::placeholder,
+.text-input.invalid::placeholder {
+    color: #c4145a;
 }
 
 .submit-btn {
@@ -125,10 +152,10 @@
     transform: translateY(.1rem);
 }
 
-.close-btn{
+.close-btn {
     position: absolute;
     text-transform: uppercase;
-    top:2rem;
+    top: 2rem;
     right: 2rem;
     background: transparent;
     border: none;
