--- a/src/components/news.css
+++ b/src/components/news.css
@@ -237,7 +237,7 @@
 }
 
 .my-blogs {
-    width: clamp(10rem, 28cqi, 28%);
+    width: clamp(20rem, 30cqi, 30%);
     height: 100%;
     background: #111214;
     display: flex;
@@ -250,6 +250,7 @@
     font-size: 1.5rem;
     color: #ddd;
     padding: 1rem;
+    letter-spacing: .1rem;
 }
 
 .blog-posts {
@@ -278,9 +279,9 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    padding: .65rem;
+    padding: .50rem;
     background-color: rgba(0, 0, 0, 0.7);
-    font-size: .75rem;
+    font-size: .70rem;
     font-weight: 500;
     text-transform: uppercase;
     color: #fff;
