--- a/src/components/news.css
+++ b/src/components/news.css
@@ -186,13 +186,6 @@
     align-items: center;
 }
 
-/* .my-blogs {
-    width: clamp(35rem, 27cqi, 20%);
-    height: 100%;
-    background-color: rgb(13, 13, 13);
-    border-radius: 1rem;
-} */
-
 .headline img {
     object-fit: cover;
     width: 100%;
@@ -336,4 +329,117 @@
 
 .news-footer p span {
     font-size: 1rem;
+}
+
+@media (max-width: 1400px) {
+    .links {
+        row-gap: .50rem;
+    }
+
+    .news-section {
+        overflow: hidden;
+    }
+
+    .news-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        overflow-y: scroll;
+    }
+
+    .news-grid::-webkit-scrollbar {
+        display: none;
+    }
+
+    .blog-posts {
+        overflow-y: scroll;
+    }
+
+    .blog-posts::-webkit-scrollbar {
+        display: none;
+    }
+
+    .blog-post {
+        flex: 0 1 calc(100% - 0.3rem);
+    }
+
+    @media (max-width: 1024px) {
+        .news-grid {
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(6, 1fr);
+        }
+    }
+
+    @media(max-width: 900px) {
+        .logo{
+            font-size: 1.5rem;
+            margin-right: 1rem;
+        }
+        .news {
+            height: 100%;
+            overflow-y: scroll;
+        }
+
+        .news::-webkit-scrollbar {
+            display: none;
+        }
+
+        .content {
+            flex-direction: column;
+            width: 100%;
+            height: 100rem;
+            row-gap: 1rem;
+        }
+
+        .navbar {
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+            height: 9rem;
+        }
+
+        .user {
+            width: calc(30% - 1rem);
+            height: 100%;
+        }
+
+        .categories {
+            width: 70%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            row-gap: .50rem;
+        }
+
+        .links {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .link {
+            margin-right: 1rem;
+        }
+
+        .news-section{
+            width: 100%;
+        }
+
+        .news-grid {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+        }
+
+        .my-blogs {
+            width: 100%;
+        }
+
+        .blog-post {
+            flex: 0 1 calc(50% - 0.4rem)
+        }
+
+        .weather-calendar{
+            flex-direction: row;
+            column-gap: 1rem;
+        }
+    }
 }
