--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,16 @@
     background-color: black;
     box-shadow: 0 2rem 3rem black;
 }
+
+@media (max-width:1400) {
+    html {
+        font-size: 50%;
+    }
+}
+
+@media(max-width: 900px) {
+    .news-blog {
+        height: 100%;
+        max-height: 100vh;
+    }
+}
