--- a/src/components/news.css
+++ b/src/components/news.css
@@ -331,6 +331,11 @@
     font-size: 1rem;
 }
 
+.news-footer img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
 @media (max-width: 1400px) {
     .links {
         row-gap: .50rem;
